grammar.js
    source_file: ($) => seq(optional($.version_command), optional(field("base_target", $.block)), repeat($.target)),

    // the root commands/elements
    target: ($) =>
      seq(field("name", $.identifier), ":", $._eol, optional(seq($._indent, optional($.block), $._dedent))),

    run_command: ($) =>
      seq(
        "RUN",
        field("options", optional(alias($.run_options, $.options))),
        optional(token(prec(5, "-- "))),
        field("command", choice($.string_array, $.shell_fragment)),
        $._eol,
      ),
    with_docker_command: ($) =>
      seq(
        "WITH DOCKER",
        field("options", optional(alias($.with_docker_options, $.options))),
        $._eol,
        $.run_command,
        "END",
        $._eol,
      ),
    _immediate_identifier: ($) =>
      seq(
        $._immediate_string_base_alpha,
        repeat(
          choice(
            $._immediate_string_base_alpha,
            $._immediate_string_base_num,
            token.immediate("."),
            token.immediate("-"),
          ),
        ),
      ),
    identifier: ($) =>
      seq(
        $._string_base_alpha,
        repeat(
          choice(
            $._immediate_string_base_alpha,
            $._immediate_string_base_num,
            token.immediate("."),
            token.immediate("-"),
          ),
        ),
      ),
    image_spec: ($) =>
      seq(
        field("name", $.image_name),
        optional(seq(token.immediate(":"), field("tag", $.image_tag))),
        optional(seq(token.immediate("@"), field("digest", $.image_digest))),
      ),
    image_name: ($) =>
      seq(
        $._string_base,
        repeat(
          prec.left(choice($._immediate_string_base, token.immediate("/"), token.immediate("-"), token.immediate("."))),
        ),
      ),
    shell_fragment: ($) =>
      repeat1(
        choice(
          $._string_base,
          $.comment,
          ...extra_tokens("\"'"),
          alias($.escape_sequence, $._immediate_escape_sequence),
          seq('"', repeat(choice(token.immediate(prec(15, /[^"\\]+/)), $._immediate_escape_sequence)), '"'),
          seq("'", repeat(choice(token.immediate(prec(15, /[^'\\]+/)), $._immediate_escape_sequence)), "'"),
        ),
      ),
    target_ref: ($) =>
      seq(
        optional(field("earthfile", $.earthfile_ref)),
        "+",
        field("name", alias($._immediate_identifier, $.identifier)),
      ),
    variable: ($) =>
      seq($._string_base_alpha, repeat(choice($._immediate_string_base_alpha, $._immediate_string_base_num))),
    allow_privileged: (_) => token(prec(5, "--allow-privileged")),
    build_arg: ($) =>
      seq(
        choice(token(prec(5, "--")), "-"),
        field("name", alias($._immediate_variable, $.variable)),
        choice(seq(token.immediate("="), optional(field("value", $.string))), field("value", $.string)),
      ),
    compose: ($) =>
      seq(token(prec(5, "--compose")), choice(token.immediate(" "), token.immediate("=")), field("value", $.string)),
    load: ($) =>
      seq(
        token(prec(5, "--load")),
        choice(token.immediate(" "), token.immediate("=")),
        optional(seq(field("image", choice($.image_spec, $.string)), token.immediate("="))),
        field("target", choice($.target_ref, $.target_ref_with_build_args, $.string)),
      ),
    pull: ($) =>
      seq(
        token(prec(5, "--pull")),
        choice(token.immediate(" "), token.immediate("=")),
        field("value", choice($.image_spec, $.string)),
      ),
    service: ($) =>
      seq(token(prec(5, "--service")), choice(token.immediate(" "), token.immediate("=")), field("value", $.string)),
    _string_base: ($) =>
      seq(choice($._string_base_other, $._string_base_alpha, $._string_base_num), optional($._immediate_string_base)),
    _string_base_alpha: (_) => /[a-zA-Z_]+/,
    _immediate_string_base: ($) =>
      prec(
        2,
        repeat1(choice($._immediate_string_base_other, $._immediate_string_base_alpha, $._immediate_string_base_num)),
      ),
    _immediate_string_base_alpha: (_) => token.immediate(/[a-zA-Z_]+/),
    _immediate_string_base_num: (_) => token.immediate(/[0-9]+/),
    unquoted_string: ($) =>
      prec.dynamic(
        -1,
        seq(
          choice($._string_base, $.expansion, $.escape_sequence, ...extra_tokens("$'\"")),
          repeat(
            choice(
              $._immediate_string_base,
              alias($._immediate_escape_sequence, $.escape_sequence),
              ...extra_immediate_tokens("$'\""),
              alias($._immediate_expansion, $.expansion),
            ),
          ),
        ),
      ),
    _immediate_expansion: ($) =>
      seq(
        token.immediate("$"),
        choice(
          alias($._immediate_variable, $.variable),
          seq(token.immediate("{"), alias($._immediate_variable, $.variable), token.immediate("}")),
          seq(token.immediate("("), $.shell_fragment, token.immediate(")")),
        ),
      ),
    _immediate_variable: ($) =>
      prec.left(
        2,
        seq(
          $._immediate_string_base_alpha,
          repeat(choice($._immediate_string_base_alpha, $._immediate_string_base_num)),
        ),
      ),

    // extra tokens, eol, …
    _immediate_escape_sequence: (_) => /\\./,
    line_continuation: (_) => token(prec(10, "\\\n")),
    _eol: ($) => choice("\n", "\r\n", "\f", "\0", $.comment),
  },
});
