test/corpus/with_docker.txt
==================
with docker command
==================

foo:
    WITH DOCKER
        RUN echo "Hello, world!"
    END

---

    (source_file
      (target
        name: (identifier)
        (with_docker_command
          (run_command
            command: (shell_fragment)))))

==================
with docker command with options
==================

foo:
    WITH DOCKER \
        --pull alpine \
        --load my-image=+docker \
        --load my-other-image=(+docker --foo=bar) \
        --compose docker-compose.yaml \
        --allow-privileged \
        --service hop
        RUN echo "Hello, world!"
    END

---

    (source_file
      (target
        name: (identifier)
        (with_docker_command
          (line_continuation)
          option: (pull
            value: (image_spec
              name: (image_name)))
          (line_continuation)
          option: (load
            image: (image_spec
              name: (image_name))
            target: (target_ref
              name: (identifier)))
          (line_continuation)
          option: (load
            image: (image_spec
              name: (image_name))
            target: (target_ref
              name: (identifier))
            target: (build_arg
              name: (variable)
              value: (unquoted_string)))
          (line_continuation)
          option: (compose
            value: (unquoted_string))
          (line_continuation)
          option: (allow_privileged)
          (line_continuation)
          option: (service
            value: (unquoted_string))
          (run_command
            command: (shell_fragment)))))
